// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/forms/select/SelectResults should render empty options 1`] = `
.c0 {
  position: absolute;
  top: calc(100% + 4px);
  left: 0;
  width: 240px;
  overflow: hidden;
  z-index: 1000;
  background: #fff;
  border: 1px solid #002d56;
  box-shadow: 1px 1px 4px #dae0e3;
}

.c1 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  padding: 8px;
  font-style: italic;
  text-align: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Nebyla nalezena žádná data.
    </div>
  </div>
</div>
`;

exports[`components/forms/select/SelectResults should render left-aligned variant 1`] = `
.c3 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c3:disabled {
  cursor: not-allowed;
}

.c0 {
  position: absolute;
  top: calc(100% + 4px);
  right: 0;
  width: 240px;
  overflow: hidden;
  z-index: 1000;
  background: #fff;
  border: 1px solid #002d56;
  box-shadow: 1px 1px 4px #dae0e3;
}

.c1 {
  list-style-type: none;
  overflow-y: auto;
  max-height: 360px;
}

.c2 {
  border-bottom: 1px solid #dae0e3;
}

.c2:last-child {
  border-bottom: none;
}

.c4 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  width: 100%;
  padding: 4px 8px;
  background: #fff;
  white-space: nowrap;
  text-align: left;
}

.c4:hover {
  background-color: #f2f7fa;
}

.c4:focus {
  outline: 1px dashed #002d56;
  outline-offset: -1px;
}

.c4:disabled {
  color: #98c3d9;
}

<div>
  <div
    class="c0"
  >
    <ul
      class="c1"
    >
      <li
        class="c2"
      >
        <button
          class="c3 c4"
          type="button"
        >
          Item 1
        </button>
      </li>
      <li
        class="c2"
      >
        <button
          class="c3 c4"
          type="button"
        >
          Item 2
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`components/forms/select/SelectResults should render loading state 1`] = `
.c0 {
  position: absolute;
  top: calc(100% + 4px);
  left: 0;
  width: 240px;
  overflow: hidden;
  z-index: 1000;
  background: #fff;
  border: 1px solid #002d56;
  box-shadow: 1px 1px 4px #dae0e3;
}

<div>
  <div
    class="c0"
  >
    <div
      data-testid="loader-mock"
    />
  </div>
</div>
`;

exports[`components/forms/select/SelectResults should render properly 1`] = `
.c3 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c3:disabled {
  cursor: not-allowed;
}

.c0 {
  position: absolute;
  top: calc(100% + 4px);
  left: 0;
  width: 240px;
  overflow: hidden;
  z-index: 1000;
  background: #fff;
  border: 1px solid #002d56;
  box-shadow: 1px 1px 4px #dae0e3;
}

.c1 {
  list-style-type: none;
  overflow-y: auto;
  max-height: 360px;
}

.c2 {
  border-bottom: 1px solid #dae0e3;
}

.c2:last-child {
  border-bottom: none;
}

.c4 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  width: 100%;
  padding: 4px 8px;
  background: #fff;
  white-space: nowrap;
  text-align: left;
}

.c4:hover {
  background-color: #f2f7fa;
}

.c4:focus {
  outline: 1px dashed #002d56;
  outline-offset: -1px;
}

.c4:disabled {
  color: #98c3d9;
}

<div>
  <div
    class="c0"
  >
    <ul
      class="c1"
    >
      <li
        class="c2"
      >
        <button
          class="c3 c4"
          type="button"
        >
          Item 1
        </button>
      </li>
      <li
        class="c2"
      >
        <button
          class="c3 c4"
          type="button"
        >
          Item 2
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`components/forms/select/SelectResults should render result item props 1`] = `
.c3 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c3:disabled {
  cursor: not-allowed;
}

.c0 {
  position: absolute;
  top: calc(100% + 4px);
  left: 0;
  width: 240px;
  overflow: hidden;
  z-index: 1000;
  background: #fff;
  border: 1px solid #002d56;
  box-shadow: 1px 1px 4px #dae0e3;
}

.c1 {
  list-style-type: none;
  overflow-y: auto;
  max-height: 360px;
}

.c2 {
  border-bottom: 1px solid #dae0e3;
}

.c2:last-child {
  border-bottom: none;
}

.c4 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  width: 100%;
  padding: 4px 8px;
  background: #fff;
  white-space: nowrap;
  text-align: left;
}

.c4:hover {
  background-color: #f2f7fa;
}

.c4:focus {
  outline: 1px dashed #002d56;
  outline-offset: -1px;
}

.c4:disabled {
  color: #98c3d9;
}

<div>
  <div
    class="c0"
  >
    <ul
      class="c1"
    >
      <li
        class="c2"
      >
        <button
          class="c3 c4"
          disabled=""
          title="DESCRIPTION"
          type="button"
        >
          Item
          <sub>
            EXTRA
          </sub>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`components/forms/select/SelectResults should render right-aligned variant 1`] = `
.c3 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c3:disabled {
  cursor: not-allowed;
}

.c0 {
  position: absolute;
  top: calc(100% + 4px);
  left: 0;
  width: 240px;
  overflow: hidden;
  z-index: 1000;
  background: #fff;
  border: 1px solid #002d56;
  box-shadow: 1px 1px 4px #dae0e3;
}

.c1 {
  list-style-type: none;
  overflow-y: auto;
  max-height: 360px;
}

.c2 {
  border-bottom: 1px solid #dae0e3;
}

.c2:last-child {
  border-bottom: none;
}

.c4 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  width: 100%;
  padding: 4px 8px;
  background: #fff;
  white-space: nowrap;
  text-align: left;
}

.c4:hover {
  background-color: #f2f7fa;
}

.c4:focus {
  outline: 1px dashed #002d56;
  outline-offset: -1px;
}

.c4:disabled {
  color: #98c3d9;
}

<div>
  <div
    class="c0"
  >
    <ul
      class="c1"
    >
      <li
        class="c2"
      >
        <button
          class="c3 c4"
          type="button"
        >
          Item 1
        </button>
      </li>
      <li
        class="c2"
      >
        <button
          class="c3 c4"
          type="button"
        >
          Item 2
        </button>
      </li>
    </ul>
  </div>
</div>
`;
